# wfd_scorer

./: LICENSE  pyproject.toml
wfd_scorer/: cli.py  twenty_twenty_four.py
